--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="application/javascript" src="../src/assets/pie-diagrem.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -40,4 +43,22 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+    VanillaTilt.init(document.querySelectorAll(".pakage-div-two,.pakage-div-three"),{
+        max: 3,
+        speed: 40,
+        glare : true,
+        "max-glare":1,
+    });
+
+    $(window).on("scroll", function(){
+        //console.log("scrolltop",$(window).scrollTop());
+        //console.log("height",$(window).height());
+        //console.log("linechart top:",$(".line-chart").offset().top);
+        if($(".statistics-row").offset().top - $(window).scrollTop() < $(window).height()/2 - 200 ){
+            //alert("On viewport");
+            $(".statistics-row").addClass("anim");
+        }
+    });
+</script>
 </html>
