--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="application/javascript" src="../src/assets/pie-diagrem.js"></script>
+    <!-- <script type="application/javascript" src="../src/assets/pie-diagrem.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
