--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="//code.tidio.co/6br1n6grvv00n0789vwbtvt5ifymw8qo.js" async></script>
   <script>
-    VanillaTilt.init(document.querySelectorAll(".pakage-div-two,.pakage-div-three"),{
-        max: 3,
-        speed: 40,
-        glare : true,
-        "max-glare":1,
-    });
 
     $(window).on("scroll", function(){
         //console.log("scrolltop",$(window).scrollTop());
