--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <script type="application/javascript" src="../src/assets/pie-diagrem.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <!-- chat bot -->
+    <script src="//code.tidio.co/ehfbs5ybgrlkdg04p6mbpuemenhog8an.js" async></script> 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,7 +45,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="//code.tidio.co/6br1n6grvv00n0789vwbtvt5ifymw8qo.js" async></script>
+ 
   <script>
 
     $(window).on("scroll", function(){
